--- a/client/app/index.html
+++ b/client/app/index.html
@@ -10,7 +10,7 @@
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/client.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/zoom-manager.css">
 
     {{content-for "head-footer"}}
   </head>
@@ -18,7 +18,7 @@
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/client.js"></script>
+    <script src="{{rootURL}}assets/zoom-manager.js"></script>
 
     {{content-for "body-footer"}}
   </body>
